# multimodal-data-classifier

./: .gitignore  README.md  generate_assets.py  main.py
docs/: Пояснительная записка.docx  Пояснительная записка_исходная.docx  Рекомендации по структуре.txt  Структура.docx  Тема.txt  Тестирование приложения.md
project/: README.md  classifier_history.sqlite3  generate_assets.py  main.py  pyproject.toml  requirements.txt
project/artifacts/models/: image_classifier.joblib  text_classifier.joblib
project/artifacts/tables/: image_classification_report.csv  image_metrics.json  summary_metrics.csv  text_classification_report.csv
project/scripts/: build_presentation.py  build_thesis.py
project/src/vkr_classifier/: __init__.py  api.py  config.py  database.py  diagrams.py  main.py  reporting.py  service.py
project/src/vkr_classifier/data/: text_samples.py
project/src/vkr_classifier/models/: image_classifier.py
project/tests/: conftest.py  test_api.py  test_main.py  test_service.py
project/vkr_classifier/: api.py  batch_processing.py  config.py  database.py  diagrams.py  main.py  schemas.py  service.py  training.py  ui.py
project/vkr_classifier/data/: image_generator.py  text_samples.py
project/vkr_classifier/models/: image_classifier.py  text_classifier.py
scripts/: build_presentation.py  build_thesis.py
